<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity">

    <TextView
        android:id="@+id/label_hi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginTop="@dimen/margin_xl_elements"
        android:text="@string/str_hi"
        android:textSize="@dimen/text_large_elements"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_hi"
        android:layout_margin="@dimen/margin_large_elements"
        android:hint="@string/str_email"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_email"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginEnd="@dimen/margin_large_elements"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:hint="@string/str_password"
        app:endIconMode="password_toggle"
        app:startIconDrawable="@drawable/ic_baseline_lock_24"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_password"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginEnd="@dimen/margin_large_elements"
        android:text="@string/str_ingresar"
        style="@style/Widget.Material3.Button.Icon" />

    <TextView
        android:id="@+id/label_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login"
        android:layout_marginTop="@dimen/margin_medium_elements"
        android:text="@string/str_or"
        android:textColor="@color/design_default_color_primary"
        android:gravity="center_horizontal"
        style="@style/TextAppearance.AppCompat.Medium"/>

    <Button
        android:id="@+id/button_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_or"
        android:layout_marginTop="@dimen/margin_medium_elements"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginEnd="@dimen/margin_large_elements"
        android:text="@string/str_continue_with_google"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        app:icon="@drawable/ic_baseline_android_24"/>

    <Button
        android:id="@+id/button_login_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_google"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginEnd="@dimen/margin_large_elements"
        android:text="@string/str_continue_with_facebook"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        app:icon="@drawable/ic_baseline_android_24"/>

    <Button
        android:id="@+id/button_login_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_facebook"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:layout_marginEnd="@dimen/margin_large_elements"
        android:text="@string/str_continue_with_twitter"
        style="@style/Widget.Material3.Button.ElevatedButton.Icon"
        app:icon="@drawable/ic_baseline_android_24"/>

    <TextView
        android:id="@+id/label_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:layout_marginStart="@dimen/margin_large_elements"
        android:text="@string/str_no_account"
        app:layout_constraintEnd_toStartOf="@+id/label_link_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_login_twitter" />

    <TextView
        android:id="@+id/label_link_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small_elements"
        android:layout_marginTop="@dimen/margin_small_elements"
        android:text="@string/str_register"
        android:textColor="@color/design_default_color_primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/label_register"
        app:layout_constraintTop_toBottomOf="@id/button_login_twitter" />

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>